--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(LULESH CXX)
 
-option(WITH_MPI    "Build LULESH with MPI"          TRUE)
+option(WITH_MPI    "Build LULESH with MPI"          FALSE)
 option(WITH_OPENMP "Build LULESH with OpenMP"       TRUE)
 option(WITH_SILO   "Build LULESH with silo support" FALSE)
+option(WITH_FAASM  "Build for Faasm"                FALSE)
 
 if (WITH_MPI)
   find_package(MPI REQUIRED)
@@ -16,8 +17,12 @@ else()
 endif()
 
 if (WITH_OPENMP)
-  find_package(OpenMP REQUIRED)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  if(WITH_FAASM)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+  else()
+    find_package(OpenMP REQUIRED)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  endif()
 endif()
 
 if (WITH_SILO)
@@ -35,7 +40,7 @@ if (WITH_SILO)
   if (SILO_FOUND)
     add_definitions("-DVIZ_MESH")
     include_directories(${SILO_INCLUDE_DIR})
-    #   Note: silo needs to be built as a dynamic lib, otherwise 
+    #   Note: silo needs to be built as a dynamic lib, otherwise
     # there are additional dependencies (hdf5) which we don't know.
     # This would be fixed by silo providing a CMake package.
     list(APPEND LULESH_EXTERNAL_LIBS ${SILO_LIBRARY})
@@ -50,6 +55,10 @@ set(LULESH_SOURCES
   lulesh.cc)
 
 set(LULESH_EXEC lulesh2.0)
-
 add_executable(${LULESH_EXEC} ${LULESH_SOURCES})
+
+if(WITH_FAASM)
+target_link_libraries(${LULESH_EXEC} faasm faasmp)
+else()
 target_link_libraries(${LULESH_EXEC} ${LULESH_EXTERNAL_LIBS})
+endif()
