--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,15 @@ endif()
 if (WITH_OPENMP)
   if(WITH_FAASM)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+
+    set(CMAKE_EXE_LINKER_FLAGS "${FAASM_EXE_LINKER_FLAGS} \
+      -Xlinker --export=_faasm_zygote \
+      -Xlinker --export=__heap_base \
+      -Xlinker --export=__data_end \
+      -Xlinker --export=__wasm_call_ctors \
+      -Xlinker --max-memory=4294901760 \
+      -Wl,-z,stack-size=4194304 -Wl, \
+    ")
   else()
     find_package(OpenMP REQUIRED)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
