--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 
 if (WITH_OPENMP)
   if(WITH_FAASM)
-    set(CMAKE_CXX_FLAGS "--target=wasm32-wasi-threads ${CMAKE_CXX_FLAGS} -fopenmp")
+    set(CMAKE_CXX_FLAGS "--target=wasm32-wasi-threads ${CMAKE_CXX_FLAGS} -fopenmp -fopenmp-simd")
   else()
     find_package(OpenMP REQUIRED)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
